--- a/public/math-program.css
+++ b/public/math-program.css
@@ -14,6 +14,11 @@ body {
   -moz-user-select: none; /* mozilla browsers */
   -khtml-user-select: none; /* webkit (konqueror) browsers */
   -ms-user-select: none; /* IE10+ */
+
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  width: calc(100% - 500px);
 }
 
 .expectation-input {
@@ -26,9 +31,8 @@ body {
 }
 
 #generalStudentMessageDiv {
-  margin: 50px 0px 50px 20px;
-  width: 400px;
-  height: 60vh;
+  width: calc(100% - 500px);
+  height: 80vh;
   border-color: black;
   border-style: solid;
   border-radius: 10px;
@@ -40,6 +44,7 @@ body {
   color: white;
   border-radius: 10px 10px 0px 0px;
   margin: 0;
+  background-color: #110D65;
 }
 
 .backgroundBlack {
@@ -86,8 +91,8 @@ body {
     z-index: 2;
     border-left-style: solid;
     border-left-width: 1.5px;
-    border-top-left-radius: 11px;
-    border-bottom-left-radius: 11px;
+    /* border-top-left-radius: 11px;
+    border-bottom-left-radius: 11px; */
 }
 
 .heading-block {
@@ -95,13 +100,13 @@ body {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    height: 8%;
+    /* height: 8%; */
     background-color: #110D65;
     font-size: 24px;
     color: white;
     text-align: center;
     padding: 1%;
-    border-top-left-radius: 10px;
+    /* border-top-left-radius: 10px; */
     align-self: stretch;
     position: relative;
 }
@@ -184,8 +189,8 @@ body {
     grid-template-columns: 80% 20%;
     grid-auto-rows: auto;
     overflow-y: auto;
-    border-top-left-radius: 11px;
-    border-bottom-left-radius: 11px;
+    /* border-top-left-radius: 11px;
+    border-bottom-left-radius: 11px; */
 }
 
 .button2 {
@@ -216,7 +221,7 @@ body {
 
 .button {
   width: 140px;
-  height: 45px;
+  height: 28px;
   font-size: 14px;
   font-weight: 500;
   letter-spacing: 2.5px;
@@ -232,10 +237,9 @@ body {
 }
 
 .button:hover {
-  background-color: #110D65;
-  box-shadow: 0px 15px 20px rgba( 17, 12, 100, 0.4);
+  background-color: #6169E0;
   color: #fff;
-  transform: translateY(-7px);
+  /* transform: translateY(-7px); */
 }
 
 /*.input-row-center {
@@ -252,3 +256,13 @@ body {
     justify-content: space-between;
 }*/
 
+#studentProfilePic {
+  height: 100px;
+  width: 100px;
+}
+
+#fileLabel {
+  position: absolute;
+  bottom: -4px;
+  right: 0px;
+}
