--- a/public/phonics-program.css
+++ b/public/phonics-program.css
@@ -12,6 +12,11 @@ body {
   -moz-user-select: none; /* mozilla browsers */
   -khtml-user-select: none; /* webkit (konqueror) browsers */
   -ms-user-select: none; /* IE10+ */
+
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  width: calc(100% - 500px);
 }
 
 .expectation-input {
@@ -24,13 +29,12 @@ body {
 }
 
 #generalStudentMessageDiv {
-  margin: 50px 0px 50px 20px;
-  width: 400px;
-  height: 60vh;
-  border-color: black;
-  border-style: solid;
-  border-radius: 10px;
-  border-width: 1px;
+    width: calc(100% - 500px);
+    height: 80vh;
+    border-color: black;
+    border-style: solid;
+    border-radius: 10px;
+    border-width: 1px;
 }
 
 .studentMessageLabel {
@@ -38,6 +42,7 @@ body {
   color: white;
   border-radius: 10px 10px 0px 0px;
   margin: 0;
+  background-color: #110D65;
 }
 
 .backgroundBlack {
@@ -56,8 +61,8 @@ body {
     z-index: 2;
     border-left-style: solid;
     border-left-width: 1.5px;
-    border-top-left-radius: 11px;
-    border-bottom-left-radius: 11px;
+    /* border-top-left-radius: 11px;
+    border-bottom-left-radius: 11px; */
 }
 
 .heading-block {
@@ -65,13 +70,13 @@ body {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    height: 8%;
+    /* height: 8%; */
     background-color: #110D65;
     font-size: 24px;
     color: white;
     text-align: center;
     padding: 1%;
-    border-top-left-radius: 10px;
+    /* border-top-left-radius: 10px; */
     align-self: stretch;
 }
 
@@ -153,8 +158,8 @@ body {
     grid-template-columns: 80% 20%;
     grid-auto-rows: auto;
     overflow-y: auto;
-    border-top-left-radius: 11px;
-    border-bottom-left-radius: 11px;
+    /* border-top-left-radius: 11px;
+    border-bottom-left-radius: 11px; */
 }
 
 .button2 {
@@ -184,27 +189,26 @@ body {
 }
 
 .button {
-  width: 140px;
-  height: 45px;
-  font-size: 14px;
-  font-weight: 500;
-  letter-spacing: 2.5px;
-  text-transform: uppercase;
-  color: #110D65;
-  background-color: #fff;
-  border: none;
-  border-radius: 45px;
-  box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
-  transition: all 0.3s ease 0s;
-  cursor: pointer;
-  outline: none;
+    width: 140px;
+    height: 28px;
+    font-size: 14px;
+    font-weight: 500;
+    letter-spacing: 2.5px;
+    text-transform: uppercase;
+    color: #110D65;
+    background-color: #fff;
+    border: none;
+    border-radius: 45px;
+    box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
+    transition: all 0.3s ease 0s;
+    cursor: pointer;
+    outline: none;
 }
-
+  
 .button:hover {
-  background-color: #110D65;
-  box-shadow: 0px 15px 20px rgba( 17, 12, 100, 0.4);
-  color: #fff;
-  transform: translateY(-7px);
+    background-color: #6169E0;
+    color: #fff;
+    /* transform: translateY(-7px); */
 }
 
 /*.input-row-center {
@@ -221,3 +225,13 @@ body {
     justify-content: space-between;
 }*/
 
+#studentProfilePic {
+    height: 100px;
+    width: 100px;
+  }
+  
+  #fileLabel {
+    position: absolute;
+    bottom: -4px;
+    right: 0px;
+  }
