--- a/public/Forms/ACT Daily Log/Daily Log.css
+++ b/public/Forms/ACT Daily Log/Daily Log.css
@@ -1303,3 +1303,89 @@ span:hover + .wrap a, .wrap:hover a{
   top: 80px;
   left: 80px;
 }
+
+.dropbtn {
+  background-color: var(--primary-color);
+  color: white;
+  padding: 8px 16px 8px 16px;
+  font-size: 16px;
+  border: none;
+}
+
+/*.calendarNav .dropdown {
+  position: relative;
+  display: inline-block;
+}
+
+.bottom .dropdown {
+  position: relative;
+  display: inline-block;
+}*/
+
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #f1f1f1;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 100;
+  box-sizing: content-box;
+}
+
+.dropdown-content>div {
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+}
+
+.dropdown-content>div.danger {
+  background-color: white;
+  color: #E94D41;
+}
+
+.dropdown-content>div.danger:hover {
+  background-color: #E94D41;
+  color: white;
+}
+
+.dropdown-content>div.selected {
+  display: none;
+}
+
+.dropdown-content>div:hover {background-color: #ddd;}
+
+/*.calendarNav .dropdown:hover>.dropdown-content {display: block;}
+
+.calendarNav .dropdown:hover .dropbtn {
+  background-color: white;
+  color: var(--primary-color);
+}
+
+.bottom .dropdown:hover .dropdown-content {
+  display: block;
+  position: absolute;
+  margin-bottom: 10px;
+  bottom: 30px;
+  right: 0px;
+}
+
+.bottom .dropdown:hover .dropdown-content::after {
+  height: 10px;
+  width: 100%;
+  content: "";
+  position: absolute;
+  bottom: -10px;
+}
+
+
+
+.calendarNav .dropdown-right {
+  position: relative;
+}
+
+.calendarNav .dropdown-right:hover>.dropdown-content {
+  display: block;
+  top: 0px;
+  left: 100%;
+}*/
