--- a/public/math-program.css
+++ b/public/math-program.css
@@ -37,6 +37,8 @@ body {
   border-style: solid;
   border-radius: 10px;
   border-width: 1px;
+  display: flex;
+  flex-direction: column;
 }
 
 .studentMessageLabel {
