--- a/public/phonics-program.css
+++ b/public/phonics-program.css
@@ -35,6 +35,8 @@ body {
     border-style: solid;
     border-radius: 10px;
     border-width: 1px;
+    display: flex;
+    flex-direction: column;
 }
 
 .studentMessageLabel {
