--- a/public/Forms/ACT Daily Log/Daily Log.css
+++ b/public/Forms/ACT Daily Log/Daily Log.css
@@ -243,7 +243,7 @@ div p {
     position: relative;
     height: 81vh;
     width: 100vw;
-    background-color: #242947;
+    background-color: #5662A9;
     z-index: 1;
 }
 
@@ -689,7 +689,7 @@ MASTER */
     height: 10vh;
     width: 100%;
     align-items: center;
-    background-color: #242947;
+    background-color: #5662A9;
 }
 
 .generalInfo {
@@ -1057,7 +1057,7 @@ span:hover + .wrap a, .wrap:hover a{
 }
 
 #studentGeneralInfoContainer {
-  background-color: #242947;
+  background-color: #5662A9;
   padding: 10px;
   width: 70%;
   height: 70%;
@@ -1213,7 +1213,8 @@ span:hover + .wrap a, .wrap:hover a{
 }
 
 #studentGeneralInfoContainer .gridContainer .practiceTest {
-  background-color: #3D3D3D;
+  background-color: white;
+  color: #242424;
 }
 
 #studentGeneralInfoContainer .gridContainer .gridItem {
@@ -1306,7 +1307,7 @@ span:hover + .wrap a, .wrap:hover a{
 
 .dropbtn {
   /*background-color: var(--primary-color);*/
-  background-color: #242947;
+  background-color: #5662A9;
   color: white;
   padding: 8px 16px 8px 16px;
   font-size: 16px;
