--- a/public/subject-tutoring-dash.css
+++ b/public/subject-tutoring-dash.css
@@ -46,6 +46,8 @@ body {
   border-style: solid;
   border-radius: 10px;
   border-width: 1px;
+  display: flex;
+  flex-direction: column;
 }
 
 #gradesContainer {
