bring the inquiry back

--- a/public/inquiry.css
+++ b/public/inquiry.css
@@ -79,7 +79,6 @@ body {
   font-size: 14px;
   text-align: center;
   color: #666;
-  cursor: default;
   margin: 0 3px;
   padding: 10px 10px 10px 30px;
   min-width: 75px;
@@ -91,6 +90,7 @@ body {
   -ms-user-select: none;
   user-select: none; 
   transition: background-color 0.2s ease;
+  cursor: pointer;
 }
 
 .arrow-steps .step:after,
