--- a/public/calendar.css
+++ b/public/calendar.css
@@ -3,7 +3,7 @@
 } 
 
 body {
-  overflow-y: hidden;
+  overflow-y: auto;
 }
 
 /* height of time slot */
@@ -443,4 +443,106 @@ select {
 
 #addGeneralInfoRecurringRadio:checked~#addGeneralInfoRecurringWrapper {
   display: block;
+}
+
+.gridContainer {
+  display: grid;
+}
+
+#eventGlance{
+  grid-template-columns: 50px calc(25% - 12.5px) calc(25% - 12.5px) calc(25% - 12.5px) calc(25% - 12.5px);
+  width: 100%;
+  max-height: 100vh;
+}
+
+#eventGlance :disabled {
+  color: white;
+  opacity: 1;
+  -webkit-text-fill-color: white !important;
+  -webkit-opacity: 1 !important;
+}
+
+#eventGlance .gridCornerItem {
+  background-color: transparent;
+}
+
+#eventGlance .gridDividerItem {
+  background-color: #141865;
+  color: white;
+  padding: 5px;
+  text-align: center;
+  font-weight: 600;
+  border: 1px solid black;
+  margin: 0;
+  font-family: inherit;
+  font-size: inherit;
+  grid-column: 1 / 6;
+}
+
+#eventGlance .gridHeaderItem {
+  background-color: #2C3E50;
+  color: white;
+  padding: 5px;
+  text-align: center;
+  font-weight: 600;
+  border: 1px solid black;
+  margin: 0;
+  font-family: inherit;
+  font-size: inherit;
+}
+
+#eventGlance img.gridItem {
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  padding: 0px;
+  object-fit: cover;
+  
+}
+
+#eventGlance .practiceTest {
+  background-color: white;
+  color: #242424;
+}
+
+#eventGlance .gridItem {
+  background-color: #3F4458;
+  color: white;
+  padding: 5px;
+  text-align: center;
+  border: 1px solid black;
+  margin: 0;
+  font-weight: 400;
+  font-family: inherit;
+  font-size: inherit;
+}
+
+#eventGlance .highlight {
+  /* border-top: 3px solid #65CC9F;
+  border-bottom: 3px solid #65CC9F; */
+  border-top: 3px solid #80CBC4;
+  border-bottom: 3px solid #80CBC4;
+}
+
+#eventGlance :focus {
+  background-color: #80CBC4;
+  border-top: 1px solid #80CBC4;
+  border-bottom: 1px solid #80CBC4;
+  color: black;
+}
+
+#eventGlance .pending {
+  border-color: #2D5BFC;
+}
+
+#eventGlance .changed {
+  border-color: white;
+}
+
+#eventGlance .success {
+  border-color: #80CBC4;
+}
+
+#eventGlance .failed {
+  border-color: #E94045;
 }
