--- a/public/calendar.css
+++ b/public/calendar.css
@@ -40,6 +40,28 @@ body {
 
 @keyframes ants { to { background-position: 100% 100% } }
 
+.loader {
+  display: none;
+  border: 20px solid #E4EFFC;
+  border-top: 20px solid #110D65;
+  border-radius: 50%;
+  width: 100px;
+  height: 100px;
+  animation: spin 2s linear infinite;
+  left: 0;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  margin: auto;
+  position: absolute;
+  z-index: 10;
+}
+
+@keyframes spin {
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(360deg); }
+}
+
 .displayNone {
   display: none;
 }
@@ -262,7 +284,6 @@ body {
   background-color: #fff;
   border: none;
   border-radius: 15px;
-  /* box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1); */
   transition: all 0.3s ease 0s;
   cursor: pointer;
   outline: none;
@@ -271,9 +292,14 @@ body {
 
 .button:hover {
   background-color: #110D65;
-  /* box-shadow: 0px 15px 20px rgba( 17, 12, 100, 0.4); */
   color: #fff;
   transform: translateY(-5px);
+}
+
+.button:disabled:hover {
+  background-color: #fff;
+  color: #110D65;
+  transform: none;
 }
 
 .button.danger {
