getting a lot of work done

--- a/public/Site Templates/site-wide.css
+++ b/public/Site Templates/site-wide.css
@@ -93,5 +93,6 @@
 #customConfirmationSection .optionsContainer>div {
   color: #057AFB;
   padding: 10px;
+  cursor: pointer;
 }
 /********************************************************************************/
