--- a/public/index.css
+++ b/public/index.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css?family=Work+Sans:300,600');
+@import url('https://fonts.googleapis.com/css?family=Work+Sans:300,600&display=swap');
 
 :root {
   --nav-background: white;
@@ -23,6 +23,10 @@
 
 *, *::before, *::after {
   box-sizing: border-box;
+}
+
+html {
+  scroll-behavior: smooth;
 }
 
 body {
@@ -134,6 +138,7 @@ header {
   z-index: 999;
   width: 100%;
   box-shadow: #00000041 0em .5em 20px;
+  transition: background-color 200ms ease-in;
 }
 
 .logo {
@@ -226,6 +231,8 @@ nav a {
   background-image: linear-gradient(45deg, #ffca02, 65%, #ea5a5a);
   font-weight: bold;
   font-size: 1em;
+  color: inherit;
+  text-decoration: none;
 }
 
 nav a:hover {
@@ -250,6 +257,17 @@ nav a:hover {
     display: grid;
     grid-template-columns: .2fr auto minmax(600px, 3fr) .2fr;
     border-radius: 0px 0px 2rem 2rem;
+    position: fixed;
+  }
+
+  header.nav-start {
+    background-color: transparent;
+    box-shadow: none;
+  }
+
+  header.nav-start:hover {
+    background-color: var(--color-primary);
+    box-shadow: #00000041 0em .5em 20px;
   }
   
   .logo {
@@ -315,6 +333,8 @@ nav a:hover {
   color: var(--color-tertiary);
   background-color: var(--color-secondary);
   min-height: 85vh;
+  background-image: linear-gradient(45deg, var(--color-accent-2-light), var(--color-accent-3-light));
+  position: relative;
 }
 
 .hero a {
@@ -323,22 +343,512 @@ nav a:hover {
 
 .hero__body {
   max-width: 100%;
+  z-index: 2;
+}
+
+.hero__intro {
+  z-index: 2;
+}
+
+.hero__background {
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  z-index: 0;
+  overflow: hidden;
+  display: none;
 }
 
 @media screen and (min-width: 800px) {
+
   .hero {
     flex-direction: row;
     align-items: center;
-    justify-content: center;
+    justify-content: flex-start;
   }
 
   .hero__intro {
-    max-width: 40%;
+    max-width: 50%;
+    margin-left: 10%;
+    /* backdrop-filter: blur(5px);
+    -webkit-backdrop-filter: blur(5px); */
+    background-color: #ffffffef;
+    padding: 2em;
+    border-radius: 1em;
+  }
+
+  .hero__intro h1 {
+    margin-bottom: .25em;
+  }
+
+  .hero__intro h4 {
+    max-width: 80%;
+    margin-bottom: 1em;
   }
 
   .hero__body {
+    display: none;
     max-width: 40%;
   }
+
+  .hero__background {
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    z-index: 0;
+    overflow: hidden;
+    display: block;
+  }
+
+  .hero__background .background-item {
+    height: 2.5em;
+    background-color: var(--color-primary);
+    color: #BCBCBC;
+    border-radius: .5em;
+    border: 1px solid #BCBCBC;
+    box-shadow: 1em 1em 20px #00000040;
+    position: absolute;
+    text-align: center;
+    padding: .5em 1em .5em 3em;
+    white-space: nowrap;
+  }
+
+  .hero__background .background-item::before {
+    content: '✓';
+    display: inline-block;
+    width: 1.25em;
+    height: 1.25em;
+    border-radius: 50%;
+    text-align: center;
+    background-color: #BCBCBC;
+    color: var(--color-primary);
+    margin-right: 1em;
+    position: absolute;
+    top: .5em;
+    left: 1em;
+  }
+
+
+  .hero__background .background-main {
+    width: 15em;
+    height: 3em;
+    border-radius: 1em;
+    box-shadow: 1em 1em 20px #00000040;
+    position: absolute;
+    color: white;
+    text-align: center;
+    font-size: 1.5em;
+    font-weight: 900;
+    padding: .75em;
+    z-index: 1;
+  }
+
+  .hero__background .background-main::before {
+    content: '✓';
+    display: inline-block;
+    width: 1.5em;
+    height: 1.5em;
+    border-radius: 50%;
+    text-align: center;
+    margin-right: 1em;
+    position: absolute;
+    top: .75em;
+    left: 1em;
+    padding: .1em;
+    background-color: white;
+  }
+
+  .hero__background .background-item:nth-child(n+1):nth-child(-n+17) {
+    animation: center-background-slide 120s linear infinite;
+  }
+  .hero__background .background-main:nth-child(n+1):nth-child(-n+17) {
+    animation: center-background-slide 80s linear infinite;
+  }
+
+  .hero__background .background-item:nth-child(n+18):nth-child(-n+34) {
+    animation: left-background-slide 120s linear infinite;
+  }
+  .hero__background .background-main:nth-child(n+18):nth-child(-n+34) {
+    animation: left-background-slide 80s linear infinite;
+  }
+
+  .hero__background .background-item:nth-child(n+35):nth-child(-n+51) {
+    animation: right-background-slide 120s linear infinite;
+  }
+  .hero__background .background-main:nth-child(n+35):nth-child(-n+51) {
+    animation: right-background-slide 80s linear infinite;
+  }
+
+  /* center items start */
+
+  .hero__background .background-item:nth-child(1) {
+    top: 30%;
+    left: 30%;
+  }
+  .hero__background .background-item:nth-child(2) {
+    top: 40%;
+    left: 90%;
+  }
+  .hero__background .background-item:nth-child(3) {
+    top: 10%;
+    left: -5%;
+  }
+  .hero__background .background-item:nth-child(4) {
+    top: 12%;
+    left: 20%;
+  }
+  .hero__background .background-item:nth-child(5) {
+    top: 50%;
+    left: 5%;
+  }
+  .hero__background .background-item:nth-child(6) {
+    top: 55%;
+    left: 55%;
+  }
+  .hero__background .background-item:nth-child(7) {
+    top: 70%;
+    left: 25%;
+  }
+  .hero__background .background-item:nth-child(8) {
+    top: 75%;
+    left: 90%;
+  }
+  .hero__background .background-item:nth-child(9) {
+    top: 85%;
+    left: 65%;
+  }
+  .hero__background .background-item:nth-child(10) {
+    top: 25%;
+    left: 80%;
+  }
+  .hero__background .background-item:nth-child(11) {
+    top: 95%;
+    left: 10%;
+  }
+  .hero__background .background-item:nth-child(12) {
+    top: 20%;
+    left: 55%;
+  }
+  .hero__background .background-main:nth-child(13) {
+    top: 80%;
+    left: 5%;
+    background-color: var(--color-accent-1-light);
+  }
+  .hero__background .background-main:nth-child(13)::before {
+    color: var(--color-accent-1-light);
+  }
+  .hero__background .background-main:nth-child(14) {
+    top: 35%;
+    left: 40%;
+    background-color: var(--color-accent-2-light);
+  }
+  .hero__background .background-main:nth-child(14)::before {
+    color: var(--color-accent-2-light);
+  }
+  .hero__background .background-main:nth-child(15) {
+    top: 50%;
+    left: 85%;
+    background-color: var(--color-accent-3-light);
+  }
+  .hero__background .background-main:nth-child(15)::before {
+    color: var(--color-accent-3-light);
+  }
+  .hero__background .background-main:nth-child(16) {
+    top: 15%;
+    left: 10%;
+    background-color: var(--color-accent-4-light);
+  }
+  .hero__background .background-main:nth-child(16)::before {
+    color: var(--color-accent-4-light);
+  }
+  .hero__background .background-main:nth-child(17) {
+    top: 70%;
+    left: 60%;
+    background-color: var(--color-accent-5-light);
+  }
+  .hero__background .background-main:nth-child(17)::before {
+    color: var(--color-accent-5-light);
+  }
+
+  @keyframes center-background-slide {
+    0% {
+      transform: translateX(0vw);
+    }
+    17% {
+      transform: translateX(-50vw);
+    }
+    33% {
+      transform: translateX(-100vw);
+      opacity: 1;
+    }
+    49% {
+      transform: translateX(-150vw);
+      opacity: 0;
+    }
+    51% {
+      transform: translateX(150vw);
+      opacity: 0;
+    }
+    67% {
+      transform: translateX(100vw);
+      opacity: 1;
+    }
+    83% {
+      transform: translateX(50vw);
+    }
+    100% {
+      transform: translateX(0vw);
+    }
+  }
+  /* center items end */
+
+  /* left items start */
+  .hero__background .background-item:nth-child(18) {
+    top: 30%;
+    left: -70%;
+  }
+  .hero__background .background-item:nth-child(19) {
+    top: 40%;
+    left: -10%;
+  }
+  .hero__background .background-item:nth-child(20) {
+    top: 10%;
+    left: -105%;
+  }
+  .hero__background .background-item:nth-child(21) {
+    top: 12%;
+    left: -80%;
+  }
+  .hero__background .background-item:nth-child(22) {
+    top: 50%;
+    left: -95%;
+  }
+  .hero__background .background-item:nth-child(23) {
+    top: 55%;
+    left: -45%;
+  }
+  .hero__background .background-item:nth-child(24) {
+    top: 70%;
+    left: -75%;
+  }
+  .hero__background .background-item:nth-child(25) {
+    top: 75%;
+    left: -10%;
+  }
+  .hero__background .background-item:nth-child(26) {
+    top: 85%;
+    left: -35%;
+  }
+  .hero__background .background-item:nth-child(27) {
+    top: 25%;
+    left: -20%;
+  }
+  .hero__background .background-item:nth-child(28) {
+    top: 95%;
+    left: -90%;
+  }
+  .hero__background .background-item:nth-child(29) {
+    top: 20%;
+    left: -45%;
+  }
+  .hero__background .background-main:nth-child(30) {
+    top: 80%;
+    left: -95%;
+    background-color: var(--color-accent-1-light);
+  }
+  .hero__background .background-main:nth-child(30)::before {
+    color: var(--color-accent-1-light);
+  }
+  .hero__background .background-main:nth-child(31) {
+    top: 35%;
+    left: -60%;
+    background-color: var(--color-accent-2-light);
+  }
+  .hero__background .background-main:nth-child(31)::before {
+    color: var(--color-accent-2-light);
+  }
+  .hero__background .background-main:nth-child(32) {
+    top: 50%;
+    left: -15%;
+    background-color: var(--color-accent-3-light);
+  }
+  .hero__background .background-main:nth-child(32)::before {
+    color: var(--color-accent-3-light);
+  }
+  .hero__background .background-main:nth-child(33) {
+    top: 15%;
+    left: -90%;
+    background-color: var(--color-accent-4-light);
+  }
+  .hero__background .background-main:nth-child(33)::before {
+    color: var(--color-accent-4-light);
+  }
+  .hero__background .background-main:nth-child(34) {
+    top: 70%;
+    left: -40%;
+    background-color: var(--color-accent-5-light);
+  }
+  .hero__background .background-main:nth-child(34)::before {
+    color: var(--color-accent-5-light);
+  }
+
+  @keyframes left-background-slide {
+    0% {
+      transform: translateX(0vw);
+      opacity: 1;
+    }
+    16% {
+      transform: translateX(-50vw);
+      opacity: 0;
+    }
+    18% {
+      transform: translateX(250vw);
+      opacity: 0;
+    }
+    33% {
+      transform: translateX(200vw);
+      opacity: 1;
+    }
+    50% {
+      transform: translateX(150vw);
+    }
+    67% {
+      transform: translateX(100vw);
+    }
+    83% {
+      transform: translateX(50vw);
+    }
+    100% {
+      transform: translateX(0vw);
+    }
+  }
+  /* left items end */
+
+  /* right items start */
+  .hero__background .background-item:nth-child(35) {
+    top: 30%;
+    left: 130%;
+  }
+  .hero__background .background-item:nth-child(36) {
+    top: 40%;
+    left: 190%;
+  }
+  .hero__background .background-item:nth-child(37) {
+    top: 10%;
+    left: 95%;
+  }
+  .hero__background .background-item:nth-child(38) {
+    top: 12%;
+    left: 120%;
+  }
+  .hero__background .background-item:nth-child(39) {
+    top: 50%;
+    left: 105%;
+  }
+  .hero__background .background-item:nth-child(40) {
+    top: 55%;
+    left: 155%;
+  }
+  .hero__background .background-item:nth-child(41) {
+    top: 70%;
+    left: 125%;
+  }
+  .hero__background .background-item:nth-child(42) {
+    top: 75%;
+    left: 190%;
+  }
+  .hero__background .background-item:nth-child(43) {
+    top: 85%;
+    left: 165%;
+  }
+  .hero__background .background-item:nth-child(44) {
+    top: 25%;
+    left: 180%;
+  }
+  .hero__background .background-item:nth-child(45) {
+    top: 95%;
+    left: 110%;
+  }
+  .hero__background .background-item:nth-child(46) {
+    top: 20%;
+    left: 155%;
+  }
+  .hero__background .background-main:nth-child(47) {
+    top: 80%;
+    left: 105%;
+    background-color: var(--color-accent-1-light);
+  }
+  .hero__background .background-main:nth-child(47)::before {
+    color: var(--color-accent-1-light);
+  }
+  .hero__background .background-main:nth-child(48) {
+    top: 35%;
+    left: 140%;
+    background-color: var(--color-accent-2-light);
+  }
+  .hero__background .background-main:nth-child(48)::before {
+    color: var(--color-accent-2-light);
+  }
+  .hero__background .background-main:nth-child(49) {
+    top: 50%;
+    left: 185%;
+    background-color: var(--color-accent-3-light);
+  }
+  .hero__background .background-main:nth-child(49)::before {
+    color: var(--color-accent-3-light);
+  }
+  .hero__background .background-main:nth-child(50) {
+    top: 15%;
+    left: 110%;
+    background-color: var(--color-accent-4-light);
+  }
+  .hero__background .background-main:nth-child(50)::before {
+    color: var(--color-accent-4-light);
+  }
+  .hero__background .background-main:nth-child(51) {
+    top: 70%;
+    left: 160%;
+    background-color: var(--color-accent-5-light);
+  }
+  .hero__background .background-main:nth-child(51)::before {
+    color: var(--color-accent-5-light);
+  }
+
+  @keyframes right-background-slide {
+    0% {
+      transform: translateX(0vw);
+    }
+    17% {
+      transform: translateX(-50vw);
+    }
+    33% {
+      transform: translateX(-100vw);
+    }
+    50% {
+      transform: translateX(-150vw);
+    }
+    67% {
+      transform: translateX(-200vw);
+      opacity: 1;
+    }
+    82% {
+      transform: translateX(-250vw);
+      opacity: 0;
+    }
+    84% {
+      transform: translateX(50vw);
+      opacity: 0;
+    }
+    100% {
+      transform: translateX(0vw);
+      opacity: 1;
+    }
+  }
+  /* right items end */
 }
 
 /* method section */
@@ -380,8 +890,10 @@ nav a:hover {
   justify-content: center;
   align-items: flex-start;
   position: relative;
-  min-height: 85vh;
+  min-height: 90vh;
+  padding: 0;
   padding-left: 3em;
+  padding-right: 1em;
   background-color: var(--color-secondary);
 }
 
@@ -393,7 +905,6 @@ nav a:hover {
   border-radius: .5em;
   padding: .5em;
   position: relative;
-  /* overflow: hidden; */
 }
 
 .about .summary {
@@ -470,7 +981,7 @@ nav a:hover {
   width: 100%;
   display: block;
   margin: 1em 0;
-  animation: slider 10s linear;
+  animation: slider 8s linear;
   animation-play-state: paused;
 }
 
@@ -506,19 +1017,8 @@ nav a:hover {
 
   .about > .details img {
     position: absolute;
-    left: -110%;
-  }
-
-  .about > .details:nth-child(1) img {
-    top: -50%;
-  }
-  
-  .about > .details:nth-child(2) img {
-    top: -100%;
-  }
-  
-  .about > .details:nth-child(3) img {
-    top: -120%;
+    left: -120%;
+    top: -4em;
   }
 }
 
@@ -535,13 +1035,20 @@ nav a:hover {
 }
 
 .tutors .breakdown {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
 }
 
 .tutors .breakdown div {
-  max-height: min-content;
+  /* max-height: min-content; */
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.tutors .breakdown .act-logo {
+  grid-column: 1 / 3;
 }
 
 .tutors .breakdown h2 {
@@ -555,9 +1062,11 @@ nav a:hover {
 
 @media screen and (min-width: 800px) {
   .tutors .breakdown {
-    flex-direction: row;
-    justify-content: space-evenly;
-    align-items: center;
+    grid-template-columns: 1fr 1fr 1fr;
+  }
+
+  .tutors .breakdown .act-logo {
+    grid-column: 1 / 2;
   }
 
   .tutors .breakdown img {
@@ -837,7 +1346,7 @@ nav a:hover {
 /* topics section */
 
 .topics {
-  background-image: url("Images/Lyrn_topics.png");
+  background-image: url("Images/Lyrn_Topics.png");
   background-color: #68D3A3;
   background-repeat: no-repeat;
   background-size: cover;
