--- a/public/index.css
+++ b/public/index.css
@@ -5,7 +5,7 @@
   --nav-color: black;
 
   --color-primary: #ffffff;
-  --color-secondary: #e7e8e9;
+  --color-secondary: #E6E7E8;
   --color-tertiary: #101b42;
 
   --color-accent-1-deep: #ffb102;
@@ -333,7 +333,7 @@ nav a:hover {
   flex-direction: column;
   color: var(--color-tertiary);
   background-color: var(--color-secondary);
-  min-height: 85vh;
+  min-height: 100vh;
   background-image: linear-gradient(45deg, var(--color-accent-2-light), var(--color-accent-3-light));
   position: relative;
 }
@@ -373,20 +373,36 @@ nav a:hover {
   .hero__intro {
     max-width: 50%;
     margin-left: 10%;
-    /* backdrop-filter: blur(5px);
-    -webkit-backdrop-filter: blur(5px); */
-    background-color: #ffffffef;
+    backdrop-filter: blur(5px);
+    -webkit-backdrop-filter: blur(5px);
+    background-color: #ffffffbd;
     padding: 2em;
     border-radius: 1em;
+    color: var(--color-tertiary);
   }
 
   .hero__intro h1 {
     margin-bottom: .25em;
+    /* background: linear-gradient(45deg, var(--color-accent-4-light), var(--color-accent-5-light));;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent; */
+    /* text-shadow: .25em .25em 20px #00000040; */
+
   }
 
   .hero__intro h4 {
-    max-width: 80%;
+    max-width: 70%;
     margin-bottom: 1em;
+    /* background: linear-gradient(45deg, var(--color-accent-4-light), var(--color-accent-5-light));;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent; */
+  }
+
+  .hero__intro .enroll {
+    width: 100%;
+    text-align: center;
+    /* background-color: var(--color-primary);
+    background-image: none; */
   }
 
   .hero__body {
@@ -870,6 +886,8 @@ nav a:hover {
 
 .method img {
   margin-top: 3em;
+  /* position: relative;
+  top: 5em; */
 }
 
 @media screen and (min-width: 800px) {
@@ -895,7 +913,7 @@ nav a:hover {
   padding: 0;
   padding-left: 3em;
   padding-right: 1em;
-  background-color: var(--color-secondary);
+  background-color: var(--color-primary);
 }
 
 .about .details {
