--- a/public/index.css
+++ b/public/index.css
@@ -234,6 +234,7 @@ nav a {
   font-size: 1em;
   color: inherit;
   text-decoration: none;
+  cursor: pointer;
 }
 
 nav a:hover {
@@ -368,6 +369,7 @@ nav a:hover {
     flex-direction: row;
     align-items: center;
     justify-content: flex-start;
+    position: relative;
   }
 
   .hero__intro {
@@ -932,6 +934,10 @@ nav a:hover {
   color: #C4C4C4;
 }
 
+.about .summary:hover {
+  color: inherit;
+}
+
 .about .about_toggle:checked ~ .summary {
   color: inherit;
 }
@@ -942,7 +948,8 @@ nav a:hover {
 
 .about .about_toggle {
   position: absolute;
-  z-index: -1;
+  z-index: -10;
+  opacity: 0;
 }
 
 .about .content {
@@ -1028,6 +1035,14 @@ nav a:hover {
 
 @media screen and (min-width: 800px) {
 
+  .about {
+    -webkit-transform: rotate(0deg);
+    -moz-transform: rotate(0deg);
+    -ms-transform: rotate(0deg);
+    -o-transform: rotate(0deg);
+    transform: rotate(0deg);
+  }
+
   .about > .details {
     max-width: 40%;
     position: relative;
@@ -1035,9 +1050,10 @@ nav a:hover {
   }
 
   .about > .details img {
-    position: absolute;
-    left: -120%;
-    top: -4em;
+    position: fixed;
+    left: 3rem;
+    top: 25%;
+    width: 40%;
   }
 }
 
@@ -1175,10 +1191,11 @@ nav a:hover {
   color: var(--color-tertiary);
   margin: 0;
   width: 100%;
+  cursor: pointer;
 }
 
 .contact-form select:invalid {
-  color: #8E8E8E;
+  color: #5f5f5f;
 }
 
 .contact-form .select-wrapper {
