--- a/public/sign-up.css
+++ b/public/sign-up.css
@@ -44,6 +44,8 @@ section {
 
 a {
   cursor: pointer;
+  text-decoration: none;
+  color: var(--color-accent-4-deep);
 }
 
 img {
@@ -60,313 +62,109 @@ details summary {
   outline: none;
 }
 
-/* Typography */
-
-h1, h2, h3, h4, h5, p {
-  margin: 0 0 .5em;
-  line-height: 1em;
-}
-
-h1 {
-  font-size: 2.5rem;
-  font-weight: 1000;
-}
-
-h2 {
-  font-size: 2rem;
-  font-weight: 900;
-}
-
-h3 {
-  font-size: 1.5rem;
-  font-weight: 900;
-}
-
-h4 {
-  font-size: 1.25rem;
-  font-weight: 300;
-}
-
-h5 {
-  font-size: 1rem;
-  font-weight: 300;
-}
-
-p {
-  font-size: 1rem;
-}
-
-@media screen and (min-width: 800px) {
-  h1 {
-    font-size: 5rem;
-    font-weight: 1000;
-  }
-  
-  h2 {
-    font-size: 3rem;
-    font-weight: 900;
-  }
-  
-  h3 {
-    font-size: 2rem;
-    font-weight: 900;
-  }
-  
-  h4 {
-    font-size: 1.8rem;
-    font-weight: 300;
-  }
-  
-  h5 {
-    font-size: 1.5rem;
-    font-weight: 300;
-  }
-
-  p {
-    font-size: 1.1rem;
-  }
-}
-
-/* navigation styles start here */
-
-header {
-  background: var(--nav-background);
-  color: var(--nav-color);
-  text-align: center;
-  z-index: 999;
-  width: 100%;
-  box-shadow: #00000041 0em .5em 20px;
-  transition: background-color 200ms ease-in;
-}
-
-.logo {
-  width: 5em;
-  padding: 1em 0px;
-  display: block;
-}
-
-/* changed this from the tutorial video to
-   allow it to gain focus, making it tabbable */
-.nav-toggle {
-  position: absolute !important;
-  top: -9999px !important;
-  left: -9999px !important;
-}
-
-.nav-toggle:focus ~ .nav-toggle-label {
-  outline: 3px solid rgba(lightblue, .75);
-}
-
-.nav-toggle-label {
-  position: absolute;
-  top: 0;
-  right: 0;
-  margin-right: 1em;
-  height: 100%;
+.register {
   display: flex;
-  align-items: center;
-}
-
-.nav-toggle-label span,
-.nav-toggle-label span::before,
-.nav-toggle-label span::after {
-  display: block;
-  background: var(--nav-color);
-  height: 2px;
-  width: 2em;
-  border-radius: 2px;
-  position: relative;
-}
-
-.nav-toggle-label span::before,
-.nav-toggle-label span::after {
-  content: '';
-  position: absolute;
-}
-
-.nav-toggle-label span::before {
-  bottom: 7px;
-}
-
-.nav-toggle-label span::after {
-  top: 7px;
-}
-
-nav {
-  position: absolute;
-  text-align: right;
-  top: 100%;
-  right: 0;
-  background: var(--nav-background);
-  box-shadow: #00000041 0em .5em 20px;
-  width: 100%;
-  transform: scale(1, 0);
-  transform-origin: top;
-  transition: transform 400ms ease-in-out;
-}
-
-nav ul {
-  margin: 0;
-  padding: 0;
-  list-style: none;
-}
-
-nav li {
-  margin-bottom: 1em;
-  margin-right: 1em;
-}
-
-nav a {
-  color: inherit;
-  text-decoration: none;
-  font-size: 1rem;
-  opacity: 0;
-  transition: opacity 150ms ease-in-out;
-}
-
-.enroll {
-  padding: .7em 1.8em;
-  border-radius: .4em;
-  background-image: linear-gradient(45deg, #ffca02, 65%, #ea5a5a);
-  font-weight: bold;
-  font-size: 1em;
-  color: inherit;
-  text-decoration: none;
-  cursor: pointer;
-}
-
-nav a:hover {
-  color: #000;
-}
-
-.nav-toggle:checked ~ nav {
-  transform: scale(1,1);
-}
-
-.nav-toggle:checked ~ nav a {
-  opacity: 1;
-  transition: opacity 250ms ease-in-out 250ms;
-}
-
-@media screen and (min-width: 800px) {
-  .nav-toggle-label {
-    display: none;
-  }
-
-  header {
-    display: grid;
-    grid-template-columns: .2fr auto minmax(600px, 3fr) .2fr;
-    border-radius: 0px 0px 2rem 2rem;
-  }
-  
-  .logo {
-    grid-column: 2 / 3;
-  }
-  
-  nav {
-    all: unset; /* this causes issues with Edge, since it's unsupported */
-    
-    /* the following lines are not from my video, but add Edge support */
-    /* position: relative;
-    text-align: left;
-    transition: none;
-    transform: scale(1,1);
-    background: none;
-    top: initial;
-    left: initial; */
-    /* end Edge support stuff */
-    
-    grid-column: 3 / 4;
-    display: flex;
-    justify-content: flex-end;
-    align-items: center;
-  }
-  
-  nav ul {
-    display: flex;
-  }
-  
-  nav li {
-    margin-left: 3em;
-    margin-bottom: 0;
-  }
-  
-  nav a {
-    opacity: 1;
-    position: relative;
-  }
-  
-  nav a::before {
-    content: '';
-    display: block;
-    height: 5px;
-    background: black;
-    position: absolute;
-    top: -.75em;
-    left: 0;
-    right: 0;
-    transform: scale(0, 1);
-    transition: transform ease-in-out 250ms;
-  }
-  
-  nav a:hover::before {
-    transform: scale(1,1);
-  }
-}
-
-
-
-/* topics section */
-
-.topics {
-  background-image: url("Images/Lyrn_Topics.png");
-  background-color: #68D3A3;
-  background-repeat: no-repeat;
-  background-size: cover;
-  height: 45vh;
-}
-
-/* footer */
-
-footer {
-  padding: 2em;
-  color: #000;
-  background-color: var(--color-secondary);
-}
-
-footer .links {
-  display: flex;
-  flex-direction: column;
-}
-
-footer .logo-box {
-  max-width: 100px;
-  height: 100px;
-  border: 1px solid var(--color-tertiary);
-  border-radius: .75em;
-  display: flex;
+  flex-direction: row;
   justify-content: center;
   align-items: center;
-  margin-bottom: 1em;
+  width: 100vw;
+  height: 100vh;
+  padding-right: 5em;
+  background-position: left;
+  background-size: 1100%;
+  background-image: linear-gradient(45deg, var(--color-accent-2-light), var(--color-accent-3-light), var(--color-accent-4-deep), var(--color-accent-3-light), var(--color-accent-2-light), var(--color-accent-3-light), var(--color-accent-4-deep), var(--color-accent-3-light));
+  animation: gradient-background 30s linear infinite;
 }
 
-footer ul {
-  list-style: none;
-  padding: 0;
+@keyframes gradient-background {
+  0% {
+    background-position: left;
+  }
+  100% {
+    background-position: right;
+  }
 }
 
-footer a {
-  text-decoration: none;
-  color: inherit;
+#signup {
+  background-color: white;
+  border-radius: 1em;
+  padding: 3em 3em 4em;
+  width: auto;
+  box-shadow: 0px 0px 20px 0px rgba(0, 0, 0, 0.30);
 }
 
-footer .copyright {
+#signup h1 {
+  margin: 0;
+  font-size: 3em;
+  background: linear-gradient(45deg, var(--color-accent-3-light), var(--color-accent-4-deep));
+  background-clip: text;
+  -webkit-text-fill-color: transparent;
+  font-weight: 900;
+}
+
+#signup h2 {
   text-align: center;
 }
 
-@media screen and (min-width: 800px) {
-  footer .links {
-    flex-direction: row;
-    justify-content: space-around;
-  }
+#signup input, #signup label {
+  display: block;
+}
+
+#signup .radios {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  margin-bottom: 2em;
+}
+
+#signup .radios input {
+  margin-right: 1em;
+  position: absolute;
+  z-index: -1;
+  top: -9999px;
+  left: -9999px;
+}
+
+#signup .radios label {
+  margin: 0em 1em;
+  padding: .5em 2em;
+  border: 2px solid var(--color-secondary);
+  border-radius: 1em;
+  font-size: 1em;
+}
+
+#signup .radios input:checked+label {
+  border: 2px solid var(--color-accent-2-deep);
+}
+
+#signup input[type='radio'], #signup input[type='radio']+label {
+  display: inline-block;
+}
+
+#signup input:not([type='radio']):not([type='submit']) {
+  font-size: 1em;
+  height: 2em;
+  min-width: 20em;
+  padding: .5em;
+  margin-bottom: 1em;
+  border-radius: .5em;
+  border: 2px solid var(--color-secondary);
+}
+
+#signup label {
+  font-size: .9em;
+}
+
+#signup input[type='submit'] {
+  width: 100%;
+  padding: .75em;
+  border-radius: .5em;
+  border: none;
+  background-color: var(--color-accent-2-deep);
+  color: white;
+  font-size: 1em;
+}
+
+#signup .have-account {
+  text-align: center;
 }
