--- a/public/index.css
+++ b/public/index.css
@@ -44,6 +44,12 @@ section {
 
 a {
   cursor: pointer;
+  text-decoration: none;
+  color: var(--color-accent-4-deep);
+}
+
+a:hover {
+  color: var(--color-accent-3-light);
 }
 
 img {
@@ -226,15 +232,28 @@ nav a {
   transition: opacity 150ms ease-in-out;
 }
 
-.enroll {
-  padding: .7em 1.8em;
-  border-radius: .4em;
-  background-image: linear-gradient(45deg, #ffca02, 65%, #ea5a5a);
-  font-weight: bold;
+nav .enroll {
   font-size: 1em;
-  color: inherit;
+}
+
+.enroll {
+  padding: .5em 1.8em;
+  border-radius: .4em;
+  background-image: linear-gradient(45deg, var(--color-accent-5-light), 10%, var(--color-accent-1-light), 90%, var(--color-accent-5-light));
+  /* background-color: var(--color-accent-4-deep); */
+  font-weight: bold;
+  font-size: 1.25em;
+  color: black;
   text-decoration: none;
   cursor: pointer;
+  background-size: 200%;
+  background-position: left;
+  transition: background-position 200ms ease-in;
+}
+
+.enroll:hover {
+  color: inherit;
+  background-position: right;
 }
 
 nav a:hover {
@@ -309,7 +328,7 @@ nav a:hover {
     position: relative;
   }
   
-  nav a::before {
+  nav a:not(.enroll)::before {
     content: '';
     display: block;
     height: 5px;
@@ -334,9 +353,14 @@ nav a:hover {
   flex-direction: column;
   color: var(--color-tertiary);
   background-color: var(--color-secondary);
-  min-height: 100vh;
+  min-height: calc(100vh - 60px);
   background-image: linear-gradient(45deg, var(--color-accent-2-light), var(--color-accent-3-light));
-  position: relative;
+
+
+  /* background-image: url('Images/Lyrn_Topics.png');
+  background-size: cover;
+  background-position: 80%;
+  position: relative; */
 }
 
 .hero a {
@@ -350,6 +374,12 @@ nav a:hover {
 
 .hero__intro {
   z-index: 2;
+  backdrop-filter: blur(5px);
+  -webkit-backdrop-filter: blur(5px);
+  background-color: rgba(255, 255, 255, 0.76);
+  padding: 2em;
+  border-radius: 1em;
+  color: var(--color-tertiary);
 }
 
 .hero__background {
@@ -360,7 +390,291 @@ nav a:hover {
   left: 0;
   z-index: 0;
   overflow: hidden;
-  display: none;
+  visibility: hidden;
+}
+
+.hero__background .background-main {
+  visibility: visible;
+}
+
+.hero__background .background-main {
+  width: 15em;
+  height: 3em;
+  border-radius: 1em;
+  box-shadow: 1em 1em 20px #00000040;
+  position: absolute;
+  color: white;
+  text-align: center;
+  font-size: 1.5em;
+  font-weight: 900;
+  padding: .75em 0em .75em 1em;
+  z-index: 1;
+}
+
+.hero__background .background-main::before {
+  content: '✓';
+  display: inline-block;
+  width: 1.5em;
+  height: 1.5em;
+  border-radius: 50%;
+  text-align: center;
+  margin-right: 1em;
+  position: absolute;
+  top: .75em;
+  left: 1em;
+  padding: .1em;
+  background-color: white;
+}
+
+
+.hero__background .background-main:nth-child(n+1):nth-child(-n+17) {
+  animation: center-background-slide 80s linear infinite;
+}
+
+.hero__background .background-main:nth-child(n+18):nth-child(-n+34) {
+  animation: left-background-slide 80s linear infinite;
+}
+
+.hero__background .background-main:nth-child(n+35):nth-child(-n+51) {
+  animation: right-background-slide 80s linear infinite;
+}
+
+@keyframes center-background-slide {
+  0% {
+    transform: translateX(0vw);
+  }
+  17% {
+    transform: translateX(-50vw);
+  }
+  33% {
+    transform: translateX(-100vw);
+    opacity: 1;
+  }
+  48% {
+    opacity: 1;
+  }
+  49% {
+    transform: translateX(-150vw);
+    opacity: 0;
+  }
+  51% {
+    transform: translateX(150vw);
+    opacity: 0;
+  }
+  52% {
+    opacity: 1;
+  }
+  67% {
+    transform: translateX(100vw);
+    opacity: 1;
+  }
+  83% {
+    transform: translateX(50vw);
+  }
+  100% {
+    transform: translateX(0vw);
+  }
+}
+
+@keyframes left-background-slide {
+  0% {
+    transform: translateX(0vw);
+    opacity: 1;
+  }
+  15% {
+    opacity: 1;
+  }
+  16% {
+    transform: translateX(-50vw);
+    opacity: 0;
+  }
+  18% {
+    transform: translateX(250vw);
+    opacity: 0;
+  }
+  19% {
+    opacity: 1;
+  }
+  33% {
+    transform: translateX(200vw);
+    opacity: 1;
+  }
+  50% {
+    transform: translateX(150vw);
+  }
+  67% {
+    transform: translateX(100vw);
+  }
+  83% {
+    transform: translateX(50vw);
+  }
+  100% {
+    transform: translateX(0vw);
+  }
+}
+
+@keyframes right-background-slide {
+  0% {
+    transform: translateX(0vw);
+  }
+  17% {
+    transform: translateX(-50vw);
+  }
+  33% {
+    transform: translateX(-100vw);
+  }
+  50% {
+    transform: translateX(-150vw);
+  }
+  67% {
+    transform: translateX(-200vw);
+    opacity: 1;
+  }
+  81% {
+    opacity: 1;
+  }
+  82% {
+    transform: translateX(-250vw);
+    opacity: 0;
+  }
+  84% {
+    transform: translateX(50vw);
+    opacity: 0;
+  }
+  85% {
+    opacity: 1;
+  }
+  100% {
+    transform: translateX(0vw);
+    opacity: 1;
+  }
+}
+
+/* center */
+
+.hero__background .background-main:nth-child(13) {
+  top: 80%;
+  left: 5%;
+  background-color: var(--color-accent-1-light);
+}
+.hero__background .background-main:nth-child(13)::before {
+  color: var(--color-accent-1-light);
+}
+.hero__background .background-main:nth-child(14) {
+  top: 35%;
+  left: 40%;
+  background-color: var(--color-accent-2-light);
+}
+.hero__background .background-main:nth-child(14)::before {
+  color: var(--color-accent-2-light);
+}
+.hero__background .background-main:nth-child(15) {
+  top: 50%;
+  left: 85%;
+  background-color: var(--color-accent-3-light);
+}
+.hero__background .background-main:nth-child(15)::before {
+  color: var(--color-accent-3-light);
+}
+.hero__background .background-main:nth-child(16) {
+  top: 15%;
+  left: 10%;
+  background-color: var(--color-accent-4-light);
+}
+.hero__background .background-main:nth-child(16)::before {
+  color: var(--color-accent-4-light);
+}
+.hero__background .background-main:nth-child(17) {
+  top: 70%;
+  left: 60%;
+  background-color: var(--color-accent-5-light);
+}
+.hero__background .background-main:nth-child(17)::before {
+  color: var(--color-accent-5-light);
+}
+
+/* left */
+.hero__background .background-main:nth-child(30) {
+  top: 80%;
+  left: -95%;
+  background-color: var(--color-accent-1-light);
+}
+.hero__background .background-main:nth-child(30)::before {
+  color: var(--color-accent-1-light);
+}
+.hero__background .background-main:nth-child(31) {
+  top: 35%;
+  left: -60%;
+  background-color: var(--color-accent-2-light);
+}
+.hero__background .background-main:nth-child(31)::before {
+  color: var(--color-accent-2-light);
+}
+.hero__background .background-main:nth-child(32) {
+  top: 50%;
+  left: -15%;
+  background-color: var(--color-accent-3-light);
+}
+.hero__background .background-main:nth-child(32)::before {
+  color: var(--color-accent-3-light);
+}
+.hero__background .background-main:nth-child(33) {
+  top: 15%;
+  left: -90%;
+  background-color: var(--color-accent-4-light);
+}
+.hero__background .background-main:nth-child(33)::before {
+  color: var(--color-accent-4-light);
+}
+.hero__background .background-main:nth-child(34) {
+  top: 70%;
+  left: -40%;
+  background-color: var(--color-accent-5-light);
+}
+.hero__background .background-main:nth-child(34)::before {
+  color: var(--color-accent-5-light);
+}
+
+/* right */
+.hero__background .background-main:nth-child(47) {
+  top: 80%;
+  left: 105%;
+  background-color: var(--color-accent-1-light);
+}
+.hero__background .background-main:nth-child(47)::before {
+  color: var(--color-accent-1-light);
+}
+.hero__background .background-main:nth-child(48) {
+  top: 35%;
+  left: 140%;
+  background-color: var(--color-accent-2-light);
+}
+.hero__background .background-main:nth-child(48)::before {
+  color: var(--color-accent-2-light);
+}
+.hero__background .background-main:nth-child(49) {
+  top: 50%;
+  left: 185%;
+  background-color: var(--color-accent-3-light);
+}
+.hero__background .background-main:nth-child(49)::before {
+  color: var(--color-accent-3-light);
+}
+.hero__background .background-main:nth-child(50) {
+  top: 15%;
+  left: 110%;
+  background-color: var(--color-accent-4-light);
+}
+.hero__background .background-main:nth-child(50)::before {
+  color: var(--color-accent-4-light);
+}
+.hero__background .background-main:nth-child(51) {
+  top: 70%;
+  left: 160%;
+  background-color: var(--color-accent-5-light);
+}
+.hero__background .background-main:nth-child(51)::before {
+  color: var(--color-accent-5-light);
 }
 
 @media screen and (min-width: 800px) {
@@ -370,17 +684,13 @@ nav a:hover {
     align-items: center;
     justify-content: flex-start;
     position: relative;
+    min-height: 100vh;
+    background-image: linear-gradient(45deg, var(--color-accent-2-light), var(--color-accent-3-light));
   }
 
   .hero__intro {
-    max-width: 50%;
+    max-width: 50em;
     margin-left: 10%;
-    backdrop-filter: blur(5px);
-    -webkit-backdrop-filter: blur(5px);
-    background-color: #ffffffbd;
-    padding: 2em;
-    border-radius: 1em;
-    color: var(--color-tertiary);
   }
 
   .hero__intro h1 {
@@ -420,7 +730,7 @@ nav a:hover {
     left: 0;
     z-index: 0;
     overflow: hidden;
-    display: block;
+    visibility: visible;
   }
 
   .hero__background .background-item {
@@ -908,17 +1218,25 @@ nav a:hover {
 .about {
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: flex-start;
   align-items: flex-start;
   position: relative;
-  min-height: 90vh;
-  padding: 0;
-  padding-left: 3em;
-  padding-right: 1em;
+  /* min-height: 80vh; */
+  height: auto;
+  padding: 2em 1em 2em 3em;
   background-color: var(--color-primary);
 }
 
-.about .details {
+.about h2 {
+  justify-self: flex-start;
+  align-self: center;
+}
+
+.about-details {
+  position: relative;
+}
+
+.about-details .details {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -928,51 +1246,51 @@ nav a:hover {
   position: relative;
 }
 
-.about .summary {
+.about-details .summary {
   width: 100%;
   cursor: pointer;
   color: #C4C4C4;
 }
 
-.about .summary:hover {
+.about-details .summary:hover {
   color: inherit;
 }
 
-.about .about_toggle:checked ~ .summary {
+.about-details .about_toggle:checked ~ .summary {
   color: inherit;
 }
 
-.about .summary h3 {
+.about-details .summary h3 {
   margin: 0;
 }
 
-.about .about_toggle {
+.about-details .about_toggle {
   position: absolute;
   z-index: -10;
   opacity: 0;
 }
 
-.about .content {
+.about-details .content {
   max-height: 0px;
   overflow: hidden;
 }
 
-.about .content * {
+.about-details .content * {
   opacity: 0;
 }
 
-.about .about_toggle:checked ~ .content {
+.about-details .about_toggle:checked ~ .content {
   margin-top: 1em;
   max-height: 100vh;
   transition: max-height 800ms ease-in-out;
 }
 
-.about .about_toggle:checked ~ .content * {
+.about-details .about_toggle:checked ~ .content * {
   opacity: 1;
   transition: opacity 250ms ease-in-out 200ms;
 }
 
-.about > .details::before {
+.about-details > .details::before {
   content: '';
   position: absolute;
   left: -2.5em;
@@ -984,23 +1302,23 @@ nav a:hover {
   background-position: 0 0;
 }
 
-.about > .details:nth-child(1)::before {
+.about-details > .details:nth-child(1)::before {
   background-image: url('Images/Lyrn_Green_Check.png');
 }
 
-.about > .details:nth-child(2)::before {
+.about-details > .details:nth-child(2)::before {
   background-image: url('Images/Lyrn_Blue_Check.png');
 }
 
-.about > .details:nth-child(3)::before {
+.about-details > .details:nth-child(3)::before {
   background-image: url('Images/Lyrn_Red_Check.png');
 }
 
-.about img {
+.about-details img {
   padding: 1em 0;
 }
 
-.about .content::after {
+.about-details .content::after {
   content: '';
   background-image: linear-gradient(45deg, #ffca02, 65%, #ea5a5a);
   height: 4px;
@@ -1011,16 +1329,16 @@ nav a:hover {
   animation-play-state: paused;
 }
 
-.about .content.remove::after {
+.about-details .content.remove::after {
   content: none;
 }
 
 
-.about .about_toggle:checked~.content::after {
+.about-details .about_toggle:checked~.content::after {
   animation-play-state: running;
 }
 
-.about .details:hover .content::after {
+.about-details .details:hover .content::after {
   animation-play-state: paused;
 }
 
@@ -1035,7 +1353,7 @@ nav a:hover {
 
 @media screen and (min-width: 800px) {
 
-  .about {
+  .about-details {
     -webkit-transform: rotate(0deg);
     -moz-transform: rotate(0deg);
     -ms-transform: rotate(0deg);
@@ -1043,17 +1361,32 @@ nav a:hover {
     transform: rotate(0deg);
   }
 
-  .about > .details {
+  .about h2 {
+    margin-bottom: 1em;
+  }
+
+  .about-details > .details {
     max-width: 40%;
     position: relative;
     left: 50%;
   }
 
-  .about > .details img {
+  .about-details > .details:first-child {
+    margin-top: 4em;
+  }
+
+  .about-details > .details:last-child {
+    margin-bottom: 4em;
+  }
+
+  .about-details > .details img {
     position: fixed;
-    left: 3rem;
-    top: 25%;
-    width: 40%;
+    right: calc(50% + 4em);
+    top: 50%;
+    transform: translateY(-50%);
+    max-height: 100%;
+    max-width: 45%;
+    padding: 0;
   }
 }
 
@@ -1216,6 +1549,16 @@ nav a:hover {
   top: 25%;
   pointer-events: none;
   transform: rotateZ(45deg);
+}
+
+.contact-form input[type='submit'] {
+  background-color: var(--color-accent-2-deep);
+  color: white;
+  cursor: pointer;
+}
+
+.contact p {
+  margin: 1em 0em .5em;
 }
 
 @media screen and (min-width: 800px) {
