--- a/public/sign-up.css
+++ b/public/sign-up.css
@@ -38,10 +38,6 @@ body {
   background-color: var(--color-secondary);
 }
 
-section {
-  padding: 3em 1em;
-}
-
 a {
   cursor: pointer;
   text-decoration: none;
@@ -64,16 +60,17 @@ details summary {
 
 .register {
   display: flex;
-  flex-direction: row;
-  justify-content: center;
+  flex-direction: column;
+  justify-content: flex-start;
   align-items: center;
   width: 100vw;
   height: 100vh;
-  padding-right: 5em;
+  padding: 5%;
   background-position: left;
   background-size: 1100%;
   background-image: linear-gradient(45deg, var(--color-accent-2-light), var(--color-accent-3-light), var(--color-accent-4-deep), var(--color-accent-3-light), var(--color-accent-2-light), var(--color-accent-3-light), var(--color-accent-4-deep), var(--color-accent-3-light));
   animation: gradient-background 30s linear infinite;
+  overflow-y: auto;
 }
 
 @keyframes gradient-background {
@@ -85,11 +82,45 @@ details summary {
   }
 }
 
+.intro {
+  color: white;
+  font-size: 1.5em;
+  font-weight: 900;
+  padding: 1em 0em;
+  align-self: flex-start;
+}
+
+.intro .logo {
+  width: min-content;
+}
+
+.intro .logo img {
+  height: 1.5em;
+}
+
+.info {
+  display: none;
+}
+
+.info li {
+  margin: 1em 0em;
+}
+
+.info h2, .info p {
+  margin: 0;
+}
+
+.info p {
+  font-size: .75em;
+  color: black;
+}
+
 #signup {
   background-color: white;
   border-radius: 1em;
-  padding: 3em 3em 4em;
-  width: auto;
+  padding: 4% 3%;
+  max-width: 100%;
+  /* max-height: 100%; */
   box-shadow: 0px 0px 20px 0px rgba(0, 0, 0, 0.30);
 }
 
@@ -100,10 +131,13 @@ details summary {
   background-clip: text;
   -webkit-text-fill-color: transparent;
   font-weight: 900;
+  text-align: center;
+  border-bottom: 1px solid var(--color-secondary);
 }
 
 #signup h2 {
   text-align: center;
+  margin: .3em;
 }
 
 #signup input, #signup label {
@@ -144,7 +178,7 @@ details summary {
 #signup input:not([type='radio']):not([type='submit']) {
   font-size: 1em;
   height: 2em;
-  min-width: 20em;
+  width: 100%;
   padding: .5em;
   margin-bottom: 1em;
   border-radius: .5em;
@@ -165,6 +199,31 @@ details summary {
   font-size: 1em;
 }
 
+#signup .error {
+  color: var(--color-accent-5-light);
+}
+
 #signup .have-account {
   text-align: center;
+}
+
+@media screen and (min-width: 800px) {
+  .register {
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .intro {
+    padding: 2em;
+    align-self: auto;
+  }
+
+  .intro .logo img {
+    margin-left: 1.5em;
+  }
+
+  .info {
+    display: block;
+  }
 }
